2001-09-21  DJ Delorie  <dj@delorie.com>

	* lib/cards.h (register_imagelib): Declare.
	(appimglib_imagelib): Declare.
	* lib/imagelib.h: Likewise.
	* lib/imagelib.c (register_iamgelib): Make public.
	* lib/make-imglib.c (dump_images): Remove auto-register feature.
	* lib/table.c: Manually register image libs.
	* games/*.c: Likewise.
	* test/test6.c: Likewise.

	* lib/funcs.h: New, define callback pointers.
	* lib/funcs.c: New, provide default callbacks.
	* lib/table.c: Accept list of callbacks in init_ace, and use
	them.
	* lib/cards.h: Define FunctionMapping struct.
	* lib/Makefile.am: Build funcs.o, remove most table_*.c.
	* games/*.c: Register callbacks instead of just providing them.
	* tests/*.c: Likewise.
	* lib/table_*.c: Remove.

2001-08-31  Brian Rater  <brater@tiac.net>

	* games/solitaire.c: Add vegas rules and scoring options
	(-vegas, -flip3s) and allow auto-move to be disabled
	(-noauto).

2001-05-06  DJ Delorie  <dj@delorie.com>

	* Version 1.2 released.

2001-05-06  DJ Delorie  <dj@delorie.com>

	* lib/table.c (init_ace): use strtol instead of atoi.
	* lib/help.c (help_init): Use pixel_for instead of
	{White,Black}Pixel
	* lib/xwin.h: Support alternate visuals.  Detect Agenda X server
	vs other StaticGray servers.
	(pixel_for): Make global for help_init().  Support PseudoColor,
	GrayScale, and StaticColor.

	* lib/Makefile.am: Add table_rs.c.
	* lib/Makefile.in: Regenerate.
	* lib/cards.h: Split init_table into init_ace and init_table,
	so we can check the display size before selecting a table
	size.  Add command line option support.  Add resize support.
	* lib/help.c: Scroll menus as needed.  Support click on screen
	to scroll.  Support key scrolling.  Support resizing.
	* lib/images.in: Replace back with back-tile.
	* lib/table.c: Split init_table into init_ace and init_table.
	Add command-line option support.  Add width/height options.
	Limit table to display size.  Support resizing.
	(card_synth2): Tweak kqj display.